another attempt at fixing safari layout issue in dialog

--- a/static/stylesheets/ui/dialog.css
+++ b/static/stylesheets/ui/dialog.css
@@ -307,6 +307,8 @@ width:180px;
 }
 
 div.ui-dialog.about_dialog div.about_sponsors p#apply {
-margin-top: 192px;
 float:left;
 }
+
+div.ui-dialog.about_dialog div.about_sponsors span#apply {
+margin-top: 187px;
